--- a/DownloadZips/Particles_WebGL/index.html
+++ b/DownloadZips/Particles_WebGL/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Asteroids_Remake</title>
-    <link rel="stylesheet" href="TemplateData/style.css">
-    <link rel="shortcut icon" href="TemplateData/favicon.ico" />
-    <script src="TemplateData/UnityProgress.js"></script>
+    <title>Unity WebGL Player | Particles</title>
+    <link rel="stylesheet" href="https://rawgit.com/rmalford2007/ParticlesProject/master/DownloadZips/Particles_WebGL/TemplateData/style.css">
+    <link rel="shortcut icon" href="https://rawgit.com/rmalford2007/ParticlesProject/master/DownloadZips/Particles_WebGL/TemplateData/favicon.ico" />
+    <script src="https://rawgit.com/rmalford2007/ParticlesProject/master/DownloadZips/Particles_WebGL/TemplateData/UnityProgress.js"></script>
   </head>
   <body class="template">
     <div class="template-wrap clear">
       <canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()" height="600px" width="960px"></canvas>
       <br>
       <div class="logo"></div>
-      <div class="fullscreen"><img src="TemplateData/fullscreen.png" width="38" height="38" alt="Fullscreen" title="Fullscreen" onclick="SetFullscreen(1);" /></div>
-      <div class="title">Asteroids_Remake</div>
+      <div class="fullscreen"><img src="https://rawgit.com/rmalford2007/ParticlesProject/master/DownloadZips/Particles_WebGL/TemplateData/fullscreen.png" width="38" height="38" alt="Fullscreen" title="Fullscreen" onclick="SetFullscreen(1);" /></div>
+      <div class="title">Particles</div>
     </div>
     <script type='text/javascript'>
   var Module = {
@@ -23,13 +23,13 @@
     compatibilitycheck: null,
     backgroundColor: "#222C36",
     splashStyle: "Light",
-    dataUrl: "Release/Particles_WebGL.data",
-    codeUrl: "Release/Particles_WebGL.js",
-    asmUrl: "Release/Particles_WebGL.asm.js",
-    memUrl: "Release/Particles_WebGL.mem",
+    dataUrl: "https://rawgit.com/rmalford2007/ParticlesProject/master/DownloadZips/Particles_WebGL/Release/Particles_WebGL.data",
+    codeUrl: "https://rawgit.com/rmalford2007/ParticlesProject/master/DownloadZips/Particles_WebGL/Release/Particles_WebGL.js",
+    asmUrl: "https://rawgit.com/rmalford2007/ParticlesProject/master/DownloadZips/Particles_WebGL/Release/Particles_WebGL.asm.js",
+    memUrl: "https://rawgit.com/rmalford2007/ParticlesProject/master/DownloadZips/Particles_WebGL/Release/Particles_WebGL.mem",
   };
 </script>
-<script src="Release/UnityLoader.js"></script>
+<script src="https://rawgit.com/rmalford2007/ParticlesProject/master/DownloadZips/Particles_WebGL/Release/UnityLoader.js"></script>
 
   </body>
 </html>
